Adding title text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <body>
         <div class="wrapper">
-
+            <div class="welcome">
+                <h1>Kasib's Reagent Assistant</h1>
+            </div>
         </div>
     </body>
 
