created div classes, spaced evenly

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
             <div class="welcome">
                 <h1>Kasib's Reagent Assistant</h1>
             </div>
+            <div class="math">
+                <div class="source">
+
+                </div>
+                <div class="solution">
+                    
+                </div>
+            </div>
+            <div class="result">
+
+            </div>
         </div>
+
     </body>
 
 </html>
