added divs for the source and solution

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             </div>
             <div class="math">
                 <div class="source">
-
+                    <p>Source</p>
+                    <h1>Concentration</h1>
+                    <h2>Volume</h2>
                 </div>
                 <div class="solution">
-                    
+                    <p>Solution</p>
+                    <h1>Concentration</h1>
+                    <h2>Volume</h2>
                 </div>
             </div>
             <div class="result">
