--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="result">
-
+                <h1>Result</h1>
             </div>
         </div>
 
