--- a/index.html
+++ b/index.html
@@ -4,55 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>🧪🧪Reagent Assistant</title>
+    <title>Reagent Assistant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/main.css">
 </head>
 
 <body>
-    <h1>Reagent Assistant</h1>
-    <table>
-        <tr>
-            <th>Source</th>
-        </tr>
-        <tr>
-            <td>Concentration</td>
-            <td>Volume</td>
-        </tr>
-    </table>
-    <table>
-        <tr>
-            <th>Solution</th>
-        </tr>
-        <tr>
-            <td>Concentration</td>
-            <td>Volume</td>
-        </tr>
-    </table>
-    <!-- <div class="wrapper">
-        <div class="welcome">
-            <h1>Kasib's Reagent Assistant</h1>
-        </div>
+    <div class="wrapper">
+        <header class="welcome">
+            <img src="assets/Atom.png" alt="pic of atom" class="atom">
+            🧪 Kasib's Reagent Assistant (title or header) 🧪
+        </header>
         <div class="math">
             <div class="source">
-                <h2>Source</h2>
-                <h3>Concentration</h3>
-                <h3>Volume</h3>
+                Source
+                <p>Concentration</p>
+                <p>Volume</p>
             </div>
             <div class="solution">
-                <h2>Solution</h2>
-                <h3>Concentration</h3>
-                <h3>Volume</h3>
+                Solution
+                <p>Concentration</p>
+                <p>Volume</p>
             </div>
         </div>
         <div class="result">
-            <h2>Result</h2>
+            Result
         </div>
-    </div> -->
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
