changed filenames for the scope of project

--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
     <div class="wrapper">
         <header class="welcome">
             <img src="assets/Atom.png" alt="pic of atom" class="atom">
-            🧪 Kasib's Reagent Assistant (title or header) 🧪
+            <p>Kasib's Reagent Assistant (title or header)</p>
         </header>
         <div class="math">
             <div class="source">
-                Source
-                <p>Concentration</p>
-                <p>Volume</p>
+                <h3>Source</h3>
+                <div class="source-input-labels">
+                    <span>Concentration</span><span>Volume</span>
+                </div>
+
+                <form action="#" class="source">
+                    <input type="text" class="source-concentration" placeholder="Source Concentration">
+                    <input type="text" class="source-volume" placeholder="Source Volume">
+                </form>
+
             </div>
             <div class="solution">
                 Solution
