tested basic input with submit button before algorithm

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 </div>
 
                 <form action="#" class="source">
-                    <input type="text" class="source-concentration" placeholder="Source Concentration">
-                    <input type="text" class="source-volume" placeholder="Source Volume">
+                    <input type="number" id="source-concentration" placeholder="Source Concentration">
+                    <input type="text" id="source-volume" placeholder="Source Volume">
                 </form>
             </div>
             <div class="solution">
@@ -41,13 +41,14 @@
                 </div>
 
                 <form action="#" class="solution">
-                    <input type="text" class="solution-concentration" placeholder="Solution Concentration">
-                    <input type="text" class="solution-volume" placeholder="Solution Volume">
+                    <input type="text" id="solution-concentration" placeholder="Solution Concentration">
+                    <input type="text" id="solution-volume" placeholder="Solution Volume">
                 </form>
 
             </div>
+            <button type="submit" onclick="show()">Submit</button>
         </div>
-        <div class="result">
+        <div class="result" id="final">
             Result
         </div>
     </div>
