changed input types to number

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <form action="#" class="source">
                     <input type="number" id="source-concentration" placeholder="Source Concentration">
-                    <input type="text" id="source-volume" placeholder="Source Volume">
+                    <input type="number" id="source-volume" placeholder="Source Volume">
                 </form>
             </div>
             <div class="solution">
@@ -41,8 +41,8 @@
                 </div>
 
                 <form action="#" class="solution">
-                    <input type="text" id="solution-concentration" placeholder="Solution Concentration">
-                    <input type="text" id="solution-volume" placeholder="Solution Volume">
+                    <input type="number" id="solution-concentration" placeholder="Solution Concentration">
+                    <input type="number" id="solution-volume" placeholder="Solution Volume">
                 </form>
 
             </div>
