changed names of placeholders, readonly for result

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <form action="#" class="source">
                     <input type="number" id="source-concentration" placeholder="Source Concentration">
-                    <input type="number" id="source-volume" placeholder="Source Volume">
+                    <input id="source-volume" placeholder="Volume needed" readonly>
                 </form>
             </div>
             <div class="solution">
@@ -41,8 +41,8 @@
                 </div>
 
                 <form action="#" class="solution">
-                    <input type="number" id="solution-concentration" placeholder="Solution Concentration">
-                    <input type="number" id="solution-volume" placeholder="Solution Volume">
+                    <input type="number" id="solution-concentration" placeholder="Final Concentration">
+                    <input type="number" id="solution-volume" placeholder="Final Volume">
                 </form>
 
             </div>
