added behavior to concentration button for fraction

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <header class="welcome">
             <img src="assets/Atom.png" alt="pic of atom" class="atom">
-            <h2>Kasib's Reagent Assistant (title or header)</h2>
+            <h2>Reagent Assistant</h2>
         </header>
         <div class="math">
             <div class="source">
@@ -44,7 +44,7 @@
                 <!-- figure out how to allow users to enter fractions -->
                 <label for="solution-concentration">Enter Concentration as a decimal: </label>
                 <input type="text" id="solution-concentration" placeholder="Final Concentration">
-                <button>Enter Concentration as a Fraction</button>
+                <button class="conversion-button">Enter Concentration as a Fraction</button>
 
                 <input type="number" id="solution-volume" placeholder="Final Volume">
 
@@ -55,7 +55,9 @@
         <div class="result" id="final">
             Result
         </div>
+
     </div>
+    <footer>Made by 🧪 Kasib</footer>
 
     <script src="js/index.js"></script>
 </body>
