--- a/index.html
+++ b/index.html
@@ -21,41 +21,27 @@
             <h2>Reagent Assistant</h2>
         </header>
         <div class="math">
-            <div class="source">
-                <h3>Source</h3>
+            <label for="source-concentration">Source Concentration: </label>
+            <input type="number" id="source-concentration">
 
-                <div class="source-input-labels">
-                    <span>Concentration</span><span>Volume</span>
-                </div>
+            <label for="source-volume">Source Volume: </label>
+            <input id="source-volume" placeholder="X" readonly>
 
+            <label for="solution-concentration">Final Concentration: </label>
 
-                <input type="number" id="source-concentration" placeholder="Source Concentration">
-                <input id="source-volume" placeholder="Volume needed" readonly>
-
+            <div class="fraction">
+                <input type="text" id="solution-concentration">
+                <button class="conversion-btn">Enter as Fraction</button>
             </div>
-            <div class="solution">
-                <h3>Solution</h3>
 
-                <div class="solution-input-labels">
-                    <span>Concentration</span><span>Volume</span>
-                </div>
+            <label for="solution-volume">Final Volume: </label>
+            <input type="number" id="solution-volume">
 
-
-                <!-- figure out how to allow users to enter fractions -->
-                <label for="solution-concentration">Enter Concentration as a decimal: </label>
-                <input type="text" id="solution-concentration" placeholder="Final Concentration">
-                <button class="conversion-button">Enter Concentration as a Fraction</button>
-
-                <input type="number" id="solution-volume" placeholder="Final Volume">
-
-
-            </div>
-            <button onclick="show()">Calculate</button>
+            <button onclick="show()" class="btn btn-info">Calculate</button>
         </div>
         <div class="result" id="final">
             Result
         </div>
-
     </div>
     <footer>Made by 🧪 Kasib</footer>
 
