--- a/index.html
+++ b/index.html
@@ -25,14 +25,22 @@
             <input type="number" id="source-concentration">
 
             <label for="source-volume">Source Volume: </label>
-            <input id="source-volume" placeholder="X" readonly>
+            <input id="source-volume" placeholder="X" readonly style="border-color: #a29bfe;">
 
             <label for="solution-concentration">Final Concentration: </label>
 
             <div class="fraction">
-                <input type="text" id="solution-concentration">
-                <button class="conversion-btn">Enter as Fraction</button>
+                <input type="number" id="solution-concentration">
+
+                <div class="nested" style="display: none;">
+                    <input type="number" class="numerator">
+                    <span>/</span>
+                    <input type="number" class="denominator">
+                </div>
+
+                <button class="fraction-btn">Enter as Fraction</button>
             </div>
+
 
             <label for="solution-volume">Final Volume: </label>
             <input type="number" id="solution-volume">
