added behavior to summarize steps to the solution

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
             <button onclick="show()" class="btn btn-info">Calculate</button>
         </div>
-        <div class="result" id="final">
-            Result
+        <div class="result">
+            #
         </div>
     </div>
     <footer>Made by 🧪 Kasib</footer>
