--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input type="number" id="source-concentration">
 
             <label for="source-volume">Source Volume: </label>
-            <input id="source-volume" placeholder="X" readonly style="border-color: #a29bfe;">
+            <input id="source-volume" placeholder="X" readonly style="color: #5f27cd;">
 
             <label for="solution-concentration">Final Concentration: </label>
             <div class="fraction">
