Frontend preserved for use while working backend

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <footer>Made by 🧪 Kasib</footer>
 
-    <script src="js/index.js"></script>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
