another restructure; updated some css

--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="src/main.css">
+    <link rel="stylesheet" href="src/style.css">
+    <script defer src="src/index.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
         <header class="welcome">
             <img src="assets/Atom.png" alt="pic of atom" class="atom">
-            <h2>Reagent Assistant</h2>
+            <h2>Kasib's Reagent Assistant</h2>
         </header>
         <div class="math">
             <label for="source-concentration">Source Concentration: </label>
             <input type="number" id="source-concentration">
 
             <label for="source-volume">Source Volume: </label>
-            <input id="source-volume" placeholder="X" readonly style="color: #5f27cd;">
+            <input id="source-volume" placeholder="X" readonly style="color: #7a46e2;">
 
             <label for="solution-concentration">Final Concentration: </label>
             <div class="fraction">
@@ -52,7 +53,7 @@
     </div>
     <footer>Made by 🧪 Kasib</footer>
 
-    <script src="src/index.js"></script>
+    
 </body>
 
 </html>
