changed some result text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button onclick="show()" class="btn btn-info">Calculate</button>
         </div>
         <div class="result">
-            #
+            Result: 
         </div>
     </div>
     <footer>Made by 🧪 Kasib</footer>
