added link to new site

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
 <body>
     <div class="wrapper">
+        <p class="blurb">Check out the new and improved app: <a href="http://44.198.174.221/">Solution-Sidekick!</a></p>
         <header class="welcome">
             <img src="assets/Atom.png" alt="pic of atom" class="atom">
-            <h2>Kasib's Reagent Assistant</h2>
+            <h2>Reagent Assistant</h2>
         </header>
         <div class="math">
             <label for="source-concentration">Source Concentration: </label>
